--- a/School105bootstrap/index.html
+++ b/School105bootstrap/index.html
@@ -8,80 +8,64 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>Школа 105</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 
 </head>
 
 <body>
-
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Школа № 105</a>
+
+  <nav class="navbar navbar-expand-lg navbar-dark align-items-start s-main-menu">
+    <div class="container mt-4">
+      <a class="s-logo" href="index.html">
+        <img src="./images/logo.png" width1=100>
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarResponsive">
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Інформація</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Досягнення</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="photogalery.html">Фотогалерея</a>
+            <a class="nav-link" href="about.html">Про школу</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Методичний кейс
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" href="#">
               Батькам
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-            </div>
+          </li>
+          <li class="nav-item s-before-logo">
+            <a class="nav-link" href="services.html">Досягнення</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" href="#">
+              Методичний кейс
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link" href="#">
               Вакансії
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Контакти</a>
           </li>
         </ul>
       </div>
+      <small class="s-head left">02096, м. Київ, вул. Сімферопольська, 10</small>
+      <small class="s-head right">тел/факс (044)576-67-70</small>
     </div>
   </nav>
 
-  <header>
+
+  <header class="head">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -90,21 +74,20 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('./images/var2.jpg">
+        <div class="carousel-item active" style="background-image: url('./images/slide1.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>First Slide</h3>
-            <p>This is a description for the first slide.</p>
+            <h2>Школа, що має традиції</h2>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('./images/school.png')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Second Slide</h3>
             <p>This is a description for the second slide.</p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080/4E2C22')">
           <div class="carousel-caption d-none d-md-block">
             <h3>Third Slide</h3>
             <p>This is a description for the third slide.</p>
@@ -124,61 +107,24 @@
 
   <!-- Page Content -->
   <div class="container">
-
-    <h1 class="my-4">Welcome to Modern Business</h1>
-
-    <!-- Marketing Icons Section -->
-    <div class="row">
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi
-              similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni
-              nostrum sint fuga.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
+    <div class="card text-white s-attention-card">
+      <div class="card-header">Шановні учні та батьки!</div>
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       </div>
     </div>
-    <!-- /.row -->
 
-    <!-- Portfolio Section -->
-    <h2>Portfolio Heading</h2>
+    <br>
 
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
+        <div class="card h-100 border-light">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="./images/news1.png" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              Project One
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt?
               Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
@@ -186,13 +132,13 @@
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
+        <div class="card h-100 border-light">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="./images/news2.png" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              Project Two
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
               varius vitae.</p>
@@ -200,110 +146,125 @@
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
+        <div class="card h-100 border-light">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="./images/news3.png" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Three</a>
+              Project Three
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio
               velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Four</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
-              varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Five</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
-              varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
-          </a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Six</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident,
-              perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
-          </div>
-        </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-4 col-sm-6">
+        <form>
+          <button type="submit" class="btn btn-light s-btn">Читати всі новини</button>
+        </form>
       </div>
     </div>
-    <!-- /.row -->
+  </div>
+  <br>
 
-    <!-- Features Section -->
-    <div class="row">
-      <div class="col-lg-6">
-        <h2>Modern Business Features</h2>
-        <p>The Modern Business template by Start Bootstrap includes:</p>
-        <ul>
-          <li>
-            <strong>Bootstrap v4</strong>
-          </li>
-          <li>jQuery</li>
-          <li>Font Awesome</li>
-          <li>Working contact form with validation</li>
-          <li>Unstyled page elements for easy customization</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam
-          totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-      </div>
-      <div class="col-lg-6">
-        <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+  <div class="container-fluid s-achievement-cards">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 d-flex flex-column ">
+          <div>
+            <img src="./images/icon_arrows.png" class="img-fluid">
+          </div>
+          <h2 class="card-title">
+            79
+          </h2>
+          <small>років досвіду</small>
+          <small>Школа заснована в 1939 році</small>
+        </div>
+        <div class="col-lg-3 col-sm-6 d-flex flex-column ">
+          <div>
+            <img src="./images/icon_people.png" class="img-fluid">
+          </div>
+          <h2 class="card-title">
+            75
+          </h2>
+          <small>Висококваліфікованих, професійних та відданих своїй справі викладачів</small>
+        </div>
+        <div class="col-lg-3 col-sm-6 d-flex flex-column ">
+          <div>
+            <img src="./images/icon_medals.png" class="img-fluid">
+          </div>
+          <h2 class="card-title">
+            41
+          </h2>
+          <small>призове місце в Всеукраїнських олімпіадах і конкурсах за 2017-2018 рік</small>
+        </div>
+        <div class="col-lg-3 col-sm-6 d-flex flex-column ">
+          <div>
+            <img src="./images/icon_lang.png" class="img-fluid">
+          </div>
+          <h2 class="card-title">
+            325
+          </h2>
+          <small>дітей щорічно відпочиває у нашому літньому таборі</small>
+        </div>
       </div>
     </div>
-    <!-- /.row -->
+  </div>
+
+  <div class="container-fluid s-article-area py-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-8">
+          <div class="row">
+            <div class="col-lg-6">
+              <p>The Modern Business template by Start Bootstrap includes:</p>
+              <ul>
+                <li>
+                  <strong>Bootstrap v4</strong>
+                </li>
+                <li>jQuery</li>
+                <li>Font Awesome</li>
+                <li>Working contact form with validation</li>
+                <li>Unstyled page elements for easy customization</li>
+              </ul>
+            </div>
+            <div class="col-lg-6">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit,
+                quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <img class="img-fluid rounded" src="./images/pupils.png" alt="">
+        </div>
+      </div>
+    </div>
 
     <hr>
+    <div class="container">
 
-    <!-- Call to Action Section -->
-    <div class="row mb-4">
-      <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae
-          veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-      </div>
-      <div class="col-md-4">
-        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+      <div class="row mb-4">
+        <div class="col-md-8">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae
+            veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+        </div>
       </div>
     </div>
-
+    <hr>
   </div>
-  <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="footer pb-3">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Спеціалізована загальноосвітня школа І-ІІІ ступенів №105 з поглибленим вивченням предметів суспільно-гуманітарного
+      <p class="text-center">Copyright &copy; Спеціалізована загальноосвітня школа І-ІІІ ступенів №105 з поглибленим вивченням предметів суспільно-гуманітарного
         циклу, м. Київ</p>
     </div>
-    <!-- /.container -->
   </footer>
 
 
